[package]
name = "rey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.23.0"
tokio = { version = "1", features = ["macros"] }
actix-web = "4"
num_cpus = "1.15.0"
serde =  { version = "1.0.163", features = ["derive"] }
bincode = "1.3.3"
sled = "0.34.7"
